Center button text in fluid & vertically aligned button groups (Fixes #6065)

--- a/src/definitions/elements/button.less
+++ b/src/definitions/elements/button.less
@@ -1194,7 +1194,8 @@
 .ui.fluid.vertical.buttons,
 .ui.fluid.vertical.buttons > .button {
   display: flex;
-  width: auto;
+  width: 100%;
+  justify-content: center;
 }
 
 .ui.two.vertical.buttons > .button {
